Mobile view fix
Adjusted mentor section width to remove horizontal scrollbar.

--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ h3 {
 
 @media (max-width: 420px) {
 	#reviewers-center {
-		width: 220px;
+		width: 300px;
 	}
 
 .date {
